Fix order on small displays

--- a/css/_content.scss
+++ b/css/_content.scss
@@ -47,7 +47,7 @@ main[role='main'] > article[role='article'] {
   > .abstract,
   > .shortdesc {
     @extend .col-lg-8;
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-down(md) {
       order: 3;
     }
     @include media-breakpoint-up(lg) {
