--- a/css/_toc.scss
+++ b/css/_toc.scss
@@ -159,7 +159,7 @@ nav[role='toc'] {
 aside.section-toc {
   @extend .col-lg-4;
 
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-down(md) {
     order: 2;
   }
   @include media-breakpoint-up(lg) {
